# parladach-backend

./: .gitattributes  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 7512ac99b25b_migración_inicial.py  8d2ee28b9cf0_crear_tabla_teacher_profiles.py
scripts/: create_admin.py  seed_users.py
src/app/: main.py
src/app/api/routes/: health.py
src/app/config/: settings.py
src/app/core/: config.py  database.py  enums.py  errors.py  logging.py  middlewares.py  security.py
src/app/models/: user.py
src/app/modules/auth/: dependencies.py  router.py  schemas.py  security.py  service.py
src/app/modules/dashboard/: router.py
src/app/modules/teacher/: admin_router.py  dependencies.py  me_router.py  models.py  public_router.py  router.py  schemas.py  service.py
tests/: test_auth_login.py  test_auth_me.py  test_auth_minimal.py  test_auth_register.py  test_auth_router.py  test_dashboards.py  test_db_connection.py  test_error_handling.py  test_health.py  test_public_teachers.py  test_rbac.py  test_security_tokens.py  test_settings.py  test_teacher_admin_list.py  test_teacher_admin_state.py  test_teacher_me_profile.py  test_teacher_profile_submit.py  test_user_model.py  test_user_status_block.py
